styles/styles.css
/* Kolory do wykorzystania wygenerowane na podstawie tła zajawki

Kolor 1 - rgb(13,1,12) hex 0D010C
Kolor 2 - rgb(245,179,126) hex F5B37E
Kolor 3 - rgb(242,142,103) hex F28E67
Kolor 4 - rgb(165,107,81) hex A56B51
Kolor 5 - rgb(86,46,37) hex 562E25

Adres do profilu i podglądu na Adobe.
https://color.adobe.com/pl/Kolorystyka-strony-color-theme-10064343/

 */

/* Czcionka na stronę font-family: 'Lato', sans-serif;*/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
/*blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}*/
table {
    border-collapse: collapse;
    border-spacing: 0;
}

/*dopasowanie strony do okna przeglądarki + reset narzuconych marginesów */

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
}


/* FZ7NI-5 ZAJAWKA jako header - START */



header {
    margin: 0 auto;
    width: 100%;
    height:100vh;
    display: table;
    background: url(../img/zajawkatlo.jpeg) no-repeat center;
    background-size: cover;
    position: relative;

}

.slogan {
    display: table-cell;
    width: 100%;
    height: 60vh;
    vertical-align: middle;
    text-align: center;
    color: whitesmoke;
    font-family: 'Quicksand', sans-serif;
    text-shadow: 0 2px rgba(0,0,0,0.8);
    padding-top: 65px;

}

.hasla {
    padding-right: 0;
    padding-left: 0;
}

.slogan h1 {
    font-size: 5vw;
    white-space:nowrap;
    font-weight: bold;
}

#logo_zaj {
    margin: 0 auto;
    margin-bottom: 20px;
}

#logo_zaj img {
    width: 50vw;
}

.slogan ul {
    list-style: none;
    background-color: rgba(0,0,0,0.4);
    margin-bottom: 15px;
}

.slogan li {
    margin-left: 5%;
    text-align: left;
    font-size: 1.7vw;
    line-height: 30px;
}

.zajawka_li2 {
    text-indent: 20px;
}

.zajawka_li3 {
    text-indent: 40px;
}


#link_formularz a {
    color: whitesmoke;
    border-color: whitesmoke;
    font-size: 1.5vw;
    background-color: rgba(0,0,0,0.4);
}

#link_formularz a:hover {
    background-color: rgba(0,0,0,0.9);;
}

.btn-group-lg>.btn, .btn-lg {
    padding-left: 0;
    padding-right: 0;
}

.guzik {
    margin-bottom: 10px;
}

/* RESPONSYWNOŚĆ ZAJAWKI @MEDIA */

@media screen and (max-width: 730px) {
    .slogan li {
        margin-left: 2%;
        text-align: left;
        font-size: 2.5vw;
        line-height: 15px;
    }

    .zajawka_li2 {
        text-indent: 5px;
    }

    .zajawka_li3 {
        text-indent: 10px;
    }
}



/* FZ7NI-5 ZAJAWKA jako header - KONIEC */
/* FZ7NI-12 wiecej info - START */

.bg-3 {
    background-color: white;
}
.feat-header {
    color: #893E16;
    font-size: 30px;
    letter-spacing: 5px;
    font-weight: bold;
    padding-top: 80px;
    padding-bottom: 60px;
    display: inline-block;
}
.feat-title {
    text-transform: uppercase;
    min-height: 50px;
    padding-top: 7px;

}
.feat-text {
    text-align: center;
    padding-bottom: 20px;
}
#product-info div {
    margin-bottom: 5%;
}

/* FZ7NI-12 wiecej info - KONIEC */
/*FZ7NI-6 SPIS PLANOWANYCH FUNKCJI*/

#features .feat {
    display: inline-block;
    color: #000000;
    padding: 5px;
}

.features-pics {
    min-height: 400px;
    padding-top: 80px;
}

#features .features-p {
    text-transform: uppercase;
    padding: 7px;
}

#features .feat-describe {
    color: #893E16;
    font-size: 30px;
    letter-spacing: 5px;
    font-weight: bold;
    padding-bottom: 60px;
}

@media screen and (max-width: 575px) {
    .features-pics {
        padding: 5px;
    }
}

/*FZ7NI-6 KONIEC SPIS PLANOWANYCH FUNKCJI*/

/* FZ7NI-8 navbar*/

.navbar .navbar-brand {
    margin-left: 0.7em;
}

.nav-item {
    margin-right: 0.7em;
}

/* FZ7NI-8 end of navbar*/

/* FZ7NI-7 sign-in section*/

#sign-in {
    background: url(../img/sign-in.jpg) no-repeat center fixed;
    /*https://picjumbo.com/work-in-progress-web-design-sketches/*/
    background-size: cover;
}

#sign-in .content {
    margin: 100px 0;
    height: auto;
    padding: 25px;
    background: rgba(44, 62, 80, 0.7);
    color: #ecf0f1;
}

#sign-in .lead {
    font-family: sans-serif;
}

/* FZ7NI-7 end of sign-in section*/

/*FZ7NI-9 INFORMACJE O ZESPOLE*/
#team-info .team-describe {
    color: #893E16;
    font-size: 30px;
    letter-spacing: 5px;
    font-weight: bold;
    padding-bottom: 60px;
    display: inline-block;
}

.team {
    min-height: 400px;
    padding: 80px;
    background-color: #d3d3d3;
}

#team-info .team-member {
    color: #696969;
    font-weight: 100;
    font-size: 20px;
    letter-spacing: 2px;
    padding: 20px;
}

#team-info a {
    padding: 5px;
    text-decoration: none;
    color: #000000;
}

#team-info a:hover {
    color: darkgrey;
}

#team-info img {
    width: 65%;
    margin-top: 25px;
}
/*FZ7NI-9 KONIEC INFORMACJE O ZESPOLE*/

